# gcpiam-search

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
.github/workflows/: deploy.yml  fetch-iam-data.yml  sync-iam-data-simple.yml  sync-iam-data.yml
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  main.rs  models.rs
backend/src/search/: engine.rs  mod.rs
data/static/: index.html  sitemap.xml
data/static/permissions/: accessapproval.requests.approve.html  accessapproval.requests.dismiss.html  accessapproval.requests.get.html  accessapproval.requests.invalidate.html  accessapproval.requests.list.html  accessapproval.serviceAccounts.get.html  accessapproval.settings.delete.html  accessapproval.settings.get.html  accessapproval.settings.update.html  accesscontextmanager.accessLevels.create.html  accesscontextmanager.accessLevels.delete.html  accesscontextmanager.accessLevels.get.html  accesscontextmanager.accessLevels.list.html  accesscontextmanager.accessLevels.replaceAll.html  accesscontextmanager.accessLevels.update.html  accesscontextmanager.authorizedOrgsDescs.create.html  accesscontextmanager.authorizedOrgsDescs.delete.html  accesscontextmanager.authorizedOrgsDescs.get.html  accesscontextmanager.authorizedOrgsDescs.list.html  accesscontextmanager.authorizedOrgsDescs.update.html  accesscontextmanager.gcpUserAccessBindings.create.html  accesscontextmanager.gcpUserAccessBindings.delete.html  accesscontextmanager.gcpUserAccessBindings.get.html  accesscontextmanager.gcpUserAccessBindings.list.html  accesscontextmanager.gcpUserAccessBindings.update.html  accesscontextmanager.policies.create.html  accesscontextmanager.policies.delete.html  accesscontextmanager.policies.get.html  accesscontextmanager.policies.getIamPolicy.html  accesscontextmanager.policies.list.html  accesscontextmanager.policies.setIamPolicy.html  accesscontextmanager.policies.update.html  accesscontextmanager.servicePerimeters.commit.html  accesscontextmanager.servicePerimeters.create.html  accesscontextmanager.servicePerimeters.delete.html  accesscontextmanager.servicePerimeters.get.html  accesscontextmanager.servicePerimeters.list.html  accesscontextmanager.servicePerimeters.replaceAll.html  accesscontextmanager.servicePerimeters.update.html  actions.agent.claimContentProvider.html  (+12656 more)
data/static/roles/: accessapproval.approver.html  accessapproval.configEditor.html  accessapproval.invalidator.html  accessapproval.viewer.html  accesscontextmanager.gcpAccessAdmin.html  actions.Admin.html  (+2039 more)
edge/: Cargo.toml  build.rs  fastly.toml
edge/src/: main.rs
frontend/: README.md  build.js  package-lock.json  package.json  tsconfig.json
frontend/public/: api.ts  app.js  app.js.map  app.ts  index.html  search.ts  styles.css  ui.ts
scraper/: Cargo.toml
scraper/src/: error.rs  gcp.rs  lib.rs  main.rs  models.rs  storage.rs  transformer.rs
scripts/: generate_static_site.py
terraform/: .gitignore  README.md  backend.tf  bigquery.tf  fastly.tf  gcp.tf  main.tf  outputs.tf  variables.tf
