[package]
name = "gcpiam-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GCP IAM permissions search backend API"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-files = "0.6"

# HTTP and async
reqwest.workspace = true
futures = "0.3"

# Caching
lru = "0.12"

# Serialization
bincode = "1.3"

# Utilities
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
regex = "1.10"

# Performance
lazy_static = "1.4"
parking_lot = "0.12"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "gcpiam-backend"
path = "src/main.rs"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"
