[package]
name = "gcpiam-edge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fastly = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
url = "2.5"
urlencoding = "2.1"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

[profile.release]
lto = true
opt-level = "s"
strip = true
